	- added clear_callback_nosnap() and clear_directory_nosnap()
	- changed option "store_output" to take value "2" to only store the "snap" folder
	- bail out when "output_folder" was found and "clear_output_folder" is not set
	- print a message when valgrind options are not supported
	- added disabled code to support gdb calls
	- removed "please report" from log message
	- added option "write_wav" to control creation of .wav files
	- temporary path and dummy root now contain the process ID to allow running of multiple instances from the same folder (NOTE: left-overs from frocefully termination and crashes cannot be cleared anymore)
	- removed option "pause_interval"
	- added check for signal file "pause.<pid>" to pause processing on the next entry (needs to be placed in working folder)
	- fixed bug in is_absolute_path() - absolute paths for "executable" are working now
	- do not treat path starting with "/" as absolute on windows
	- moved "output_folder" check before first usage of it
	- changed options "str" and "output_folder" from CFG_STR to CFG_STR_PTR
		- fixes reading of "output_folder" - it was only reading the first 4 characters
		- they cannot be left empty anymore - the defaults in the source had to be removed
	- removed config_entry_type CFG_STR from config.c/.h (it was never working properly)

	create_report
	- added option "report_type" (0 = result report / 1 = comparison report)
	- added option "compare_folder" (used for comparison report to compare "xml_folder" against)
	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports
	- always print all available data in normal mode
	- stdout was not printed was not added to report if stderr was missing